kubernetes/ingress-nginx-controller-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/app-root: /app1
  name: approot
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: approot.bar.com
    http:
      paths:
      - path: /vs-hotels
        pathType: Prefix
        backend:
          service:
            name: hotel-service-svc
            port:
              number: 8080
      - path: /vs-customers
        pathType: Prefix
        backend:
          service:
            name: customer-service-svc
            port:
              number: 8080
      - path: /vs-bookings
        pathType: Prefix
        backend:
          service:
            name: booking-service-svc
            port:
              number: 8080
