kubernetes/vision-stays-app-lb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vision-stays-app-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /vs-hotels-dm
        pathType: Prefix
        backend:
          service:
            name: hotel-service-svc
            port: 
              number: 8081
      - path: /vs-customers
        pathType: Prefix
        backend:
          service:
            name: customer-service-svc
            port: 
              number: 8081            
      - path: /vs-bookings
        pathType: Prefix
        backend:
          service:
            name: booking-service-svc
            port:
              number: 8081
